src/test/ui/dst/issue-90528-unsizing-suggestion-3.stderr
error[E0277]: the trait bound `[u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:13:17
   |
LL |     wants_write([0u8]);
   |     ----------- ^^^^^
   |     |           |
   |     |           the trait `Write` is not implemented for `[u8; 1]`
   |     |           help: convert the array to a `&mut [u8]` slice instead: `&mut [0u8][..]`
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&mut [u8] as Write>
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`

error[E0277]: the trait bound `&mut [u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:18:17
   |
LL |     wants_write(&mut [0u8]);
   |     ----------- ^^^^^^^^^^
   |     |           |
   |     |           the trait `Write` is not implemented for `&mut [u8; 1]`
   |     |           help: convert the array to a `&mut [u8]` slice instead: `&mut [0u8][..]`
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&mut [u8] as Write>
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`

error[E0277]: the trait bound `&[u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:25:17
   |
LL |     wants_write(&[0u8]);
   |     ----------- ^^^^^^ the trait `Write` is not implemented for `&[u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&mut [u8] as Write>
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`

error[E0277]: the trait bound `&[u8]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:29:17
   |
LL |     wants_write(&[0u8][..]);
   |     ----------- ^^^^^^^^^^ the trait `Write` is not implemented for `&[u8]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&mut [u8] as Write>
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-3.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`
help: consider changing this borrow's mutability
   |
LL |     wants_write(&mut [0u8][..]);
   |                 ~~~~

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
